--- a/src/TimestreamDemo/TimestreamDemo.csproj
+++ b/src/TimestreamDemo/TimestreamDemo.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Amazon.CDK.AWS.APIGateway" Version="1.73.0" />
     <PackageReference Include="Amazon.CDK.AWS.Lambda" Version="1.73.0" />
     <PackageReference Include="Amazon.CDK.AWS.S3" Version="1.73.0" />
+    <PackageReference Include="Amazon.CDK.AWS.Timestream" Version="1.73.0" />
 
     <!-- jsii Roslyn analyzers (un-comment to obtain compile-time checks for missing required props
     <PackageReference Include="Amazon.Jsii.Analyzers" Version="*" PrivateAssets="all" />
